--- a/app/index.html
+++ b/app/index.html
@@ -88,9 +88,9 @@
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <div class="slider-item__info-suptitle headline-left">Surf</div>
-          <div class="slider-item__info-title">North Shore</div>
+          <div class="slider-item__info-title animate__animated animate__fadeInLeft animate__delay-1s">North Shore</div>
           <div class="slider-item__info-suptext headline-left">Condition</div>
-          <div class="slider-item__info-text">Radical</div>
+          <div class="slider-item__info-text animate__animated animate__fadeInRight animate__delay-1s">Radical</div>
           <a href="#" class="slider-item__info-link">
             <img src="img/arrows-right.svg" alt="">
           </a>
@@ -112,7 +112,7 @@
           <div class="slider-item__info-suptitle headline-left">Surf</div>
           <div class="slider-item__info-title">West Shore</div>
           <div class="slider-item__info-suptext headline-left">Condition</div>
-          <div class="slider-item__info-text">Radical</div>
+          <div class="slider-item__info-text ">Radical</div>
           <a href="#" class="slider-item__info-link">
             <img src="img/arrows-right.svg" alt="">
           </a>
@@ -130,7 +130,7 @@
         </div>
       </div>
     </div>
-    <div class="slider-dotshead">
+    <div class="slider-dotshead animate__animated animate__fadeInUp animate__delay-2s">
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">01</div>
@@ -161,21 +161,21 @@
   <div class="container">
     <section class="surf">
       <div class="title">
-        <span>
-          Surf
+        <div>
+          <span class="subtitle wow animate__animated animate__fadeInLeft" data-wow-offset="400">Surf</span>
           <h3>Surf</h3>
-        </span>
+        </div>
       </div>
       <div class="surf__subtitle">
-        <div class="subtitle">
+        <div class="subtitle wow animate__animated animate__fadeInRight" data-wow-offset="400">
           <div class="headline-left">Current location</div>
           <div class="subtitle__head">California <span>|</span> USA</div>
         </div>
       </div>
-      <div class="slider-map">
+      <div class="slider-map wow animate__animated animate__zoomInDown" data-wow-offset="350" data-wow-duration="1.5s">
         <div class="slider-dots slider-dots--1">
-          <div class="slider-dots__circle"></div>
-          <div class="slider-dots__content">
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1s"></div>
+          <div class="slider-dots__content wow animate__animated animate__fadeIn" data-wow-delay="2.5s">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
                 <div class="slider-dots__content-title">Airlie Beach</div>
@@ -205,7 +205,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--2">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.2s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -236,7 +236,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--3">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.3s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -267,7 +267,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--4">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.4s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -298,7 +298,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--5">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.5s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -329,7 +329,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--6">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.6s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -360,7 +360,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--7">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.7s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -391,7 +391,7 @@
           </div>
         </div>
         <div class="slider-dots slider-dots--8">
-          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__circle wow animate__animated animate__fadeInUpBig" data-wow-delay="1.8s"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
@@ -425,7 +425,7 @@
       <div class="surf-slider">
 
         <div class="surf-box">
-          <div class="surf-box__wrapper" style="background-image: url(img/slide-1.jpg)">
+          <div class="surf-box__wrapper wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.3s" style="background-image: url(img/slide-1.jpg)">
             <div class="surf-box__inner">
               <div class="surf-box__inner-title">Malibu Beach</div>
               <div class="surf-box__inner-location">California <span>|</span> USA</div>
@@ -439,7 +439,7 @@
         </div>
 
         <div class="surf-box">
-          <div class="surf-box__wrapper" style="background-image: url(img/slide-2.jpg)">
+          <div class="surf-box__wrapper wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.6s" style="background-image: url(img/slide-2.jpg)">
             <div class="surf-box__inner">
               <div class="surf-box__inner-title">Airlie Beach</div>
               <div class="surf-box__inner-location">Queensland <span>|</span> Australia</div>
@@ -453,7 +453,7 @@
         </div>
 
         <div class="surf-box">
-          <div class="surf-box__wrapper" style="background-image: url(img/slide-3.jpg)">
+          <div class="surf-box__wrapper wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.9s" style="background-image: url(img/slide-3.jpg)">
             <div class="surf-box__inner">
               <div class="surf-box__inner-title">Cloud Nine</div>
               <div class="surf-box__inner-location">Siargao <span>|</span> Philippines</div>
@@ -467,7 +467,7 @@
         </div>
 
         <div class="surf-box">
-          <div class="surf-box__wrapper" style="background-image: url(img/slide-4.jpg)">
+          <div class="surf-box__wrapper wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="1.2s" style="background-image: url(img/slide-4.jpg)">
             <div class="surf-box__inner">
               <div class="surf-box__inner-title">Vieux Boucau</div>
               <div class="surf-box__inner-location">Hossegor <span>|</span> France</div>
@@ -543,41 +543,41 @@
     <section class="holder">
       <div class="container">
         <div class="title">
-          <span>
-            Travel
+          <div>
+            <span class="subtitle wow animate__animated animate__fadeInLeft" data-wow-offset="300">Travel</span>
             <h3>Travel</h3>
-          </span>
+          </div>
         </div>
         <div class="holder__slider">
           <div class="holder__slider-item holder-slider">
             <div class="holder-slider__head" style="background-image: url('img/travelslider-bg.png');">
               <div class="holder-slider__subtitle">
-                <div class="subtitle">
+                <div class="subtitle wow animate__animated animate__fadeInRight" data-wow-offset="400">
                   <div class="headline-left">Shore</div>
                   <div class="subtitle__head">Airlie Beach <span>|</span> Australia</div>
                 </div>
               </div>
             </div>
-            <div class="holder-slider__descr" style="background-image: url(img/virgin.png);">
+            <div class="holder-slider__descr wow animate__animated animate__fadeInUp" style="background-image: url(img/virgin.png);" data-wow-offset="400">
               <div class="descr">
                 <div class="headline-right">Airline</div>
                 <div class="descr__head">Virgin Australia <img src="img/avia-logo.png" alt=""></div>
               </div>
             </div>
             <div class="holder-slider__info">
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay=".3s">
                 <div class="holder-slider__info-subtitle">Destination</div>
                 <div class="holder-slider__info-title">Queensland <br> Australia</div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay=".6s">
                 <div class="holder-slider__info-subtitle">Distance</div>
                 <div class="holder-slider__info-title">7,065 Miles</div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay=".9s">
                 <div class="holder-slider__info-subtitle">holder Time</div>
                 <div class="holder-slider__info-title">23 Hours <br> 5 Minutes</div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="1.2s">
                 <div class="holder-slider__info-subtitle">Pricing</div>
                 <div class="holder-slider__info-title">$1,976 USD
                  <span class="holder-pricing__span">Round Trip</span> 
@@ -585,7 +585,7 @@
               </div>
             </div>
             <div class="holder-slider__btn">
-              <a href="" class="btn">
+              <a href="" class="btn wow animate__animated animate__fadeInUp" data-wow-delay="1.5s">
                 Book <span>Flight</span>
               </a>
             </div>
@@ -925,16 +925,16 @@
     <section class="holder sleep">
       <div class="container">
         <div class="title">
-          <span>
-            Sleep
+          <div>
+            <span class="subtitle wow animate__animated animate__fadeInLeft" data-wow-offset="300">Sleep</span>
             <h3>Sleep</h3>
-          </span>
+          </div>
         </div>
         <div class="holder__slider">
           <div class="holder__slider-item holder-slider">
             <div class="holder-slider__head" style="background-image: url('img/sleepslider-bg.png');">
               <div class="holder-slider__subtitle">
-                <div class="subtitle">
+                <div class="subtitle wow animate__animated animate__fadeInRight" data-wow-offset="400">
                   <div class="headline-left">Resorts</div>
                   <div class="subtitle__head">Auberge <span>|</span> Australia</div>
                 </div>
@@ -955,11 +955,11 @@
               </div>
             </div>
             <div class="holder-slider__info">
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.3s">
                 <div class="holder-slider__info-subtitle">Resort</div>
                 <div class="holder-slider__info-title">Auberge <br> Australia</div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.6s">
                 <div class="holder-slider__info-subtitle"># of Nights</div>
                 <div class="holder-slider__info-title">
                   <div class="quantity">
@@ -968,7 +968,7 @@
                   Nights
                 </div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="0.9s">
                 <div class="holder-slider__info-subtitle"># of Guests</div>
                 <div class="holder-slider__info-title">
                   <div class="quantity">
@@ -977,7 +977,7 @@
                   Guests
                 </div>
               </div>
-              <div class="holder-slider__info-item">
+              <div class="holder-slider__info-item wow animate__animated animate__fadeInUp" data-wow-offset="400" data-wow-delay="1.2s">
                 <div class="holder-slider__info-subtitle">Pricing</div>
                 <div class="holder-slider__info-title">
                   <span class="sum" data-nights="55" data-guests="25"></span>
@@ -987,7 +987,7 @@
               </div>
             </div>
             <div class="holder-slider__btn">
-              <a href="" class="btn">
+              <a href="" class="btn wow animate__animated animate__fadeInUp" data-wow-delay="1.5s">
                 Book <span>Stay</span>
               </a>
             </div>
@@ -1364,10 +1364,10 @@
     <!-- Shop -->
     <section class="shop">
       <div class="title">
-        <span>
-          Shop
+        <div>
+          <span class="subtitle wow animate__animated animate__fadeInLeft" data-wow-offset="300">Shop</span>
           <h3>Shop</h3>
-        </span>
+        </div>
       </div>
       <div class="shop__slider">
 
@@ -1397,7 +1397,7 @@
               </div>
             </div>
             <div class="shop__slider-content">
-              <div class="surfboard">
+              <div class="surfboard wow animate__animated animate__fadeInUp" data-wow-offset="400">
                 <img src="img/surfboard.png" alt="">
                 <div class="surfboard-box surfboard__position--1">
                   <div class="surfboard-box__circle">
@@ -1431,7 +1431,7 @@
                 </div>
 
               </div>
-              <div class="shop__extras">
+              <div class="shop__extras wow animate__animated animate__fadeInUp">
                 <div class="shop__extras-title">
                   Extras
                 </div>
@@ -1544,7 +1544,7 @@
     </section>
     <!-- Footer -->
     <footer class="footer">
-      <a href="" class="btn">
+      <a href="" class="btn wow animate__animated animate__fadeInUp">
         Go <span>Surf</span>
       </a>
       <div class="footer__copy">
